// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdvvtL sc-gsDKAQ dsCIzG kStvdk"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdvvtL sc-gsDKAQ gPIhRN kStvdk"
>
  foo
</button>
`;
